# incendio

./: CMakeLists.txt  README.md  build.rar  compile_commands.json  lib.rar
cloud/: app.py
cloud/ai/: train_model.py
cloud/templates/: dashboard.html
include/: hx711.h  lwipopts.h
src/: CMakeLists.txt  hx711.c  main.c  main_com_load_cell.c
web_dashboard/: app.py
web_dashboard/templates/: index.html
